tests/negative/gold/bad-global-name-test.gold
tests/negative/bad-global-name-test.toit:5:1: error: Invalid name
foo.bar:
^~~~~~~
Compilation failed
